--- a/style.css
+++ b/style.css
@@ -62,12 +62,8 @@ h2 {
 
   @import url('https://fonts.googleapis.com/css?family=Roboto');
 
-  /* *{
-    margin: 0;
-    padding: 0;
-  }
-   */
-  */
+ 
+  
   
   
   .form{
@@ -86,7 +82,7 @@ h2 {
     letter-spacing: 1px;  
     font-size: 45px;
     margin-bottom: 20px;
-    color: #486255;
+    color: slategray;
   }
 
   .space{
@@ -127,7 +123,7 @@ h2 {
   
   .btn{
     width: 250px;
-    background: #486255;
+    background: slategray;
     height: 50px;
     line-height: 50px;
     text-align: center;
@@ -143,9 +139,6 @@ h2 {
     border: 2px solid #486255;
   }
   
-  /* ::-webkit-input-placeholder{
-    font-family: 'roboto';
-  } */
 
 
 
@@ -195,11 +188,103 @@ h2 {
 
 
   .links{
-      color: white
+      color:white
   }
   
   
+ /* ----------------- */
+
+  /* * {
+  max-width: 700px;
+  margin: auto;
+} */
+
+
+/*body {
+    min-width: 500px;
+}*/
+
+div {
+  border-radius: 5px;
+  color: midnightblue
+}
+
+/* #header {
+  height: 40px;
+  width: 100%;
+  background-color: orangered;
+  position: fixed;
+  z-index: 1;
+} */
+
+#title {
+  margin-left: 3%;
+  color: blue
+}
+
+#footer {
+  height: 50px;
+  width: 100%;
+  background-color: red;
+  clear: both;
+  position: relative;
+}
+
+.left {
+  height: 1500px;
+  width: 45px;
+  background-color: slategray;
+  float: left;
+  /* position: fixed; */
+}
+
+.right {
+  height: 1500px;
+  width: 45px;
+  background-color: slategray;
+  float: right;
   
+}
+
+.stuff {
+  display: inline-block;
+  margin-top: 6px;
+  margin-left: 55px;
+  width: 75%;
+  height: 1000px;
+}
+
+p,
+li {
+  font-family: 'Cormorant Garamond';
+}
+
+.head {
+  font-size: 20px;
+}
+
+#name {
+  font-family: Sacramento;
+  float: right;
+  margin-top: 10px;
+  margin-right: 4%;
+}
+
+a {
+  color: black;
+  text-decoration: none;
+}
+
+@media only screen and (max-width: 430px) {
+  .left,
+  .right {
+    display: none;
+  }
+  .stuff {
+    width: 100%;
+    margin-left: 10px;
+  }
+}
   
   
   
