--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ background: linear-gradient(to right, #2C5364, #203A43, #0F2027); /* W3C, IE 10+
 
 p{
     color: White;
-    /* margin-right: 20px */
+    
 }
 
 h2 {
@@ -25,7 +25,7 @@ h2 {
 .card {
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
     max-width: 300px;
-    /* margin-left: 25px; */
+   
     text-align: center;
     font-family: arial;
     margin-top: 25px;
@@ -146,13 +146,13 @@ h2 {
     margin: 8px -16px;
   }
   
-  /* Add padding BETWEEN each column */
+  /* This is to add padding between both */
   .row,
   .row > .column {
     padding: 8px;
   }
   
-  /* Create four equal columns that floats next to each other */
+
   .column {
     float: left;
     width: 25%;
@@ -165,21 +165,21 @@ h2 {
     clear: both;
   }
   
-  /* Content */
+ 
   .content {
     background-color: slategray;
 
     padding: 10px;
   }
   
-  /* Responsive layout - makes a two column-layout instead of four columns */
+ 
   @media screen and (max-width: 900px) {
     .column {
       width: 50%;
     }
   }
   
-  /* Responsive layout - makes the two columns stack on top of each other instead of next to each other */
+
   @media screen and (max-width: 600px) {
     .column {
       width: 100%;
@@ -192,30 +192,13 @@ h2 {
   }
   
   
- /* ----------------- */
 
-  /* * {
-  max-width: 700px;
-  margin: auto;
-} */
-
-
-/*body {
-    min-width: 500px;
-}*/
 
 div {
   border-radius: 5px;
   color: midnightblue
 }
 
-/* #header {
-  height: 40px;
-  width: 100%;
-  background-color: orangered;
-  position: fixed;
-  z-index: 1;
-} */
 
 #title {
   margin-left: 3%;
